# sr-security-camera

./: .gitignore  README.md  setup.cfg  setup.py
docker/: Dockerfile  docker_build.sh  docker_run.sh  requirements.txt
script/: MANIFEST.in  cam_sender.py  main.py
script/face_detection/: face_detector.py  test.py
script/face_detection/utils/: face_util.py
script/gfpgan/: test.py
script/srgan_naru/: config.py  dev.ipynb  eval.py  main.py  model.py  path_df.csv  srgan.py
