[metadata]
name = sr_security_camera
url = https://github.com/naru-19/sr-security-camera.git
author = Matsushita Lab
description = SR security camera
long_description = file: README.md

[options]
zip_safe = False
include_package_data = True
packages = find:

install_requires =
    numpy
    opencv-contrib-python
    streamlit
    tqdm

[options.packages.find]
where = script
exclude =
    streamlit_tmp*
    utils*